    - shared data manipulation methods moved to SharedInformation;
    - save and enabled fields in MetadataUtils::Metadata removed - now used Settings fields
    - DetailsOptions namespace moved to separated file
    - widgets moved to separated directory
    - option and selection dialogs splited to few widgets for more flexibility

* Tue Jul 31 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.4
    - Changelog file provided
    - Selected file (or files) details in splitter on rigth option added
    - Easier translations of about dialog, about dialog corrected
    - Droped QObject::tr() translated strings, non QObject inherited classes are using Q_DECLARE_TR_FUNCTIONS() macro now
    - Added selection/import dialog
    - Added Selection category in options dialog containing a few settings
    - Bugfix loading preview from Exif metadata
    - Added main page in documentation
    - Save last visited directory
    - Simplification of mutual exlusions in ConvertThread
    - Bugfix image rotation and set empty iptcData
    - In metadata dialog Exif's original and digitized date and time edit field was separated
    - Save text edit history when metadata is saved only
    - Minor improvements in metadata dialog and history combo box
    - Corrected LICENSE file and Free Software Foundation's address in SIR source files. Reported by Praveen Kumar
    - Polish translation updated

* Mon May 07 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.3.1
    - saving image size in Exif metadata bugfix
    - Serbian translation added
    - Czech translation updated

* Tue Apr 10 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.3
    - flip support in convert and preview dialogs
    - full support of Exif.Image.Orientation field
    - metadata dialog with view and edit features for same Exif metadata fields
    - documentation in Doxygen for non private members (private members will be documented latter)
    - conversion options in convert dialog is shown in tabs now